syntax = "proto3";

package helloworld;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SendHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string data = 1;
}

message HelloReply {
    string name = 1;
}
